modify: fixed overflow issue with pages/items/[id] main container, added new onClick handler to select options button

--- a/styles/pages/items/styles.module.scss
+++ b/styles/pages/items/styles.module.scss
@@ -10,6 +10,7 @@
 .main-container {
   flex-grow: 1;
   position: relative;
+  overflow: auto;
 }
 
 .warning-container {
